--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -2,10 +2,6 @@ c_compiler:
 - gcc
 c_compiler_version:
 - '14'
-c_stdlib:
-- sysroot
-c_stdlib_version:
-- '2.17'
 cdt_name:
 - conda
 channel_sources:
@@ -24,12 +20,10 @@ fortran_compiler_version:
 - '14'
 libhwloc:
 - 2.11.2
-netmod:
-- ucx-1.19.0
 rdma_core:
 - '58'
 target_platform:
-- linux-64
+- linux-aarch64
 ucx:
 - '1.19'
 zip_keys:
